--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
     tools:context=".features.authentication.login.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,9 +19,11 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/textfield_background"
+            android:drawableEnd="@drawable/ic_show"
+            android:drawableTint="@color/primary"
             android:ems="10"
             android:hint="Input your password"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:minHeight="48dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -60,7 +63,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
         <EditText
-            android:id="@+id/et_email"
+            android:id="@+id/et_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -68,7 +71,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/textfield_background"
             android:ems="10"
-            android:hint="Input your email"
+            android:hint="Input your username"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             android:paddingStart="16dp"
@@ -82,9 +85,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
-            android:text="Email"
+            android:text="Username"
             android:textFontWeight="700"
-            app:layout_constraintStart_toStartOf="@+id/et_email"
+            app:layout_constraintStart_toStartOf="@+id/et_username"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -95,7 +98,7 @@
             android:text="Password"
             android:textFontWeight="700"
             app:layout_constraintStart_toStartOf="@+id/tf_password"
-            app:layout_constraintTop_toBottomOf="@+id/et_email" />
+            app:layout_constraintTop_toBottomOf="@+id/et_username" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_forgot"
