--- a/app/src/main/res/navigation/authenticaion.xml
+++ b/app/src/main/res/navigation/authenticaion.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="me.dungngminh.authenticationapp.features.authentication.login.LoginFragment"
+        android:name="me.dungngminh.verygoodblogapp.features.authentication.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="me.dungngminh.authenticationapp.features.authentication.RegisterFragment"
+        android:name="me.dungngminh.verygoodblogapp.features.authentication.register.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
         <action
