--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AuthenticationApp" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.VeryGoodBlogApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
 <!--        <item name="colorPrimary">@color/primary</item>-->
 <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
