feat(login): change ui to material 3)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,23 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="primary">#864AFC</color>
-    <color name="field">#F6F6F6</color>
-    <color name="primary_text">#585858</color>
-    <color name="primary_dark_text">#3E3E3E</color>
-    <color name="small_text">#797979</color>
-    <color name="description_text">#888888</color>
-    <color name="unselected">#757377</color>
-    <color name="unselected_text_chip">#9A9A9A</color>
-    <color name="purple_support">#EBE0FF</color>
-    <color name="white_background">#FFFFFF</color>
-    <color name="purple_700_support">#C4B0E0</color>
-    <color name="pink_500_support">#FFC7D3</color>
-    <color name="mint_support">#D2EBE8</color>
-    <color name="pink_500">#FC4A71</color>
-    <color name="purple_700">#23005c</color>
-    <color name="mint">#157E72</color>
-    <color name="deep_purple">#200E32</color>
-    <color name="red_300">#EC4D4D</color>
-    <color name="shimmer_base">#E0E0E0</color>
-    <color name="shimmer_hightlight">#F5F5F5</color>
+    <color name="seed">#864afc</color>
+    <color name="md_theme_light_primary">#712FE6</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#EADDFF</color>
+    <color name="md_theme_light_onPrimaryContainer">#24005B</color>
+    <color name="md_theme_light_secondary">#6750A4</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#E9DDFF</color>
+    <color name="md_theme_light_onSecondaryContainer">#22005D</color>
+    <color name="md_theme_light_tertiary">#6E4EA1</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#ECDCFF</color>
+    <color name="md_theme_light_onTertiaryContainer">#280057</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F6FEFF</color>
+    <color name="md_theme_light_onBackground">#001F24</color>
+    <color name="md_theme_light_surface">#F6FEFF</color>
+    <color name="md_theme_light_onSurface">#001F24</color>
+    <color name="md_theme_light_surfaceVariant">#E7E0EB</color>
+    <color name="md_theme_light_onSurfaceVariant">#49454E</color>
+    <color name="md_theme_light_outline">#7A757F</color>
+    <color name="md_theme_light_inverseOnSurface">#D0F8FF</color>
+    <color name="md_theme_light_inverseSurface">#00363D</color>
+    <color name="md_theme_light_inversePrimary">#D1BCFF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#712FE6</color>
+    <color name="md_theme_light_surfaceTintColor">#712FE6</color>
+    <color name="md_theme_dark_primary">#D1BCFF</color>
+    <color name="md_theme_dark_onPrimary">#3D0090</color>
+    <color name="md_theme_dark_primaryContainer">#5800C8</color>
+    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
+    <color name="md_theme_dark_secondary">#CFBCFF</color>
+    <color name="md_theme_dark_onSecondary">#381E72</color>
+    <color name="md_theme_dark_secondaryContainer">#4F378A</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E9DDFF</color>
+    <color name="md_theme_dark_tertiary">#D6BAFF</color>
+    <color name="md_theme_dark_onTertiary">#3E1C6F</color>
+    <color name="md_theme_dark_tertiaryContainer">#553587</color>
+    <color name="md_theme_dark_onTertiaryContainer">#ECDCFF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F24</color>
+    <color name="md_theme_dark_onBackground">#97F0FF</color>
+    <color name="md_theme_dark_surface">#001F24</color>
+    <color name="md_theme_dark_onSurface">#97F0FF</color>
+    <color name="md_theme_dark_surfaceVariant">#49454E</color>
+    <color name="md_theme_dark_onSurfaceVariant">#CBC4CF</color>
+    <color name="md_theme_dark_outline">#948F99</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F24</color>
+    <color name="md_theme_dark_inverseSurface">#97F0FF</color>
+    <color name="md_theme_dark_inversePrimary">#712FE6</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#D1BCFF</color>
+    <color name="md_theme_dark_surfaceTintColor">#D1BCFF</color>
 </resources>
