--- a/app/src/main/res/menu/home_nav_menu.xml
+++ b/app/src/main/res/menu/home_nav_menu.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/itemHomePage"
+        android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
-        android:id="@+id/itemNotification"
+        android:id="@+id/notification"
         android:enabled="true"
         android:icon="@drawable/ic_bell"
         android:title="Notification" />
     <item
-        android:id="@+id/itemBookmark"
+        android:id="@+id/bookmark"
         android:enabled="true"
         android:icon="@drawable/ic_bookmark"
         android:title="Bookmark" />
     <item
-        android:id="@+id/itemUser"
+        android:id="@+id/user"
         android:enabled="true"
         android:icon="@drawable/ic_user"
         android:title="User" />
