--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -76,9 +76,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:imeOptions="actionNext"
-                android:maxLines="1"
-                android:layout_height="wrap_content" />
+                android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
