--- a/app/src/main/res/navigation/authentication.xml
+++ b/app/src/main/res/navigation/authentication.xml
@@ -14,6 +14,7 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
@@ -21,10 +22,5 @@
         android:id="@+id/registerFragment"
         android:name="me.dungngminh.verygoodblogapp.features.authentication.register.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
-        <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
-    </fragment>
+        tools:layout="@layout/fragment_register" />
 </navigation>
